2016-03-16  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 1.1.0 released
        =========================

        Add GApplication::logFileClose() method.
        Add GCTAObservation filename constructor (#1744).
        Add gammalib::number() function (#1743).
        Add energy dispersion cube for stacked analysis (#1721).
        Add GEnergy division operator.
        Support Fermi LAT Pass 8 response functions (#1517)
        Add GObservations::nobserved() method (#1723)
        Use rejection method in GCTABackground3D::mc() (#1722)
        Use rejection method in GModelSpatialDiffuseCube::mc() (#1722)
        Make GFilename::is_fits thread safe (#1717).
        Revise GTime operators (#1714)
        Add GSkyMap::publish() method to publish map on VO Hub (#1710)
        Add GVOClient::publish() method to publish a FITS HDU (#1710)
        Handle FITS extensions in GSkyMap load() and save() methods (#1695)
        Restrict Monte Carlo simulations in GModelSpatialDiffuseConst to simulation cone (#1674)
        Use default GTime in GModelSpectral eval() and eval_gradients() methods (#1672)
        Optimise GModelSpatialDiffuseMap::set_mc_cone() method (#1673)
        Optimise GModelSpatialDiffuseCube::set_mc_cone() method (#1673)
        Use default GTime in GObservation::deadc() method (#1670)
        The GApplicationPar::filename() methods now take and return GFilename (#1671)
        Add GFilename methods and remove equivalents from GTools (#1666)
        Use column names for CTA response table access (#1656)
        Add non-const GObservation::events() method (#1664)
        Remove event fetching from GCTAObservation class (#1648)
        Implement event fetching and disposal in GCTAEventList class (#1648)
        Add GFilename::fullname() method
        Add GCTAEventList::remove() method
        Handle also additional columns in GCTAEventList::append() method
        Correct GFitsTableCol::insert() method for empty columns