@@ -2,7 +2,7 @@ New Features and Important Changes in GammaLib 1.1.0
 
 Author(s) : Juergen Knoedlseder
 
-16 March 2016
+22 April 2016
 
 
 1. Introduction
@@ -24,6 +24,9 @@ The following methods have been added to the public interface:
 - GFilaname::protocol()
 - GFilename::path()
 - GFilename::file()
+- GModelSky::spatial()
+- GModelSky::spectral()
+- GModelSky::temporal()
 - GCTAObservation(GFilename) constructor
 - GCTAResponseTable::axis(std::string)
 - GCTAResponseTable::table(std::string)
@@ -154,6 +157,9 @@ The GModelSpatialDiffuseCube::mc() method now uses a rejection method for
 simulating sky directions, which makes the MC method identical to the model
 evaluation method, using in both cases a log-log interpolation. The simulation
 cone is now used for Monte Carlo simulations (#1722).
+
+The methods spatial(), spectral() and temporal() have been added to GModelSky
+to allow setting of model components.
 
 
 9. Numerics module
